--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
-        <title>Omnifood</title>
+        <title>Sa Bi Chuong</title>
         
         <!-- <link rel="apple-touch-icon" sizes="57x57" href="/resources/favicons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/resources/favicons/apple-touch-icon-60x60.png">
@@ -273,20 +273,20 @@
             <div class="row">
                 <div class="col span-1-of-3">
                     <blockquote>
-                        Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
-                        <cite><img src="resources/img/customer-1.jpg" alt="Customer 1 photo">Alberto Duncan</cite>
+                        SBC is just awesome! I just launched a startup which leaves me with no time for cooking, so SBC is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                        <cite><img src="resources/img/TuocLe.png" alt="Customer 1 photo">Tuoc Le</cite>
                     </blockquote>
                 </div>
                 <div class="col span-1-of-3">
                     <blockquote>
-                       Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
-                        <cite><img src="resources/img/customer-2.jpg" alt="Customer 2 photo">Joana Silva</cite>
+                       Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Da Lat, but no one comes even close to SBC. Me and my family are so in love!
+                        <cite><img src="resources/img/PhamQuoc.jpg" alt="Customer 2 photo">Quoc Pham</cite>
                     </blockquote>
                 </div>
                 <div class="col span-1-of-3">
                     <blockquote>
-I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
-                    <cite><img src="resources/img/customer-3.jpg" alt="Customer 3 photo">Milton Chapman</cite>
+                        I was looking for a quick and easy food delivery service in Ho Chi Minh. I tried a lot of them and ended up with SBC. Best food delivery service. Keep up the great work!
+                    <cite><img src="resources/img/ThangNguyen.jpg" alt="Customer 3 photo">Thang Nguyen</cite>
                     </blockquote>
                 </div>
             </div>
@@ -448,7 +448,7 @@ I was looking for a quick and easy food delivery service in San Franciso. I trie
             </div>
             <div class="row">
                 <p>
-                    Copyright &copy; 2015 by Omnifood. All rights reserved.
+                    Copyright &copy; 2024 by Sa Bi Chuong Broken rice. All rights reserved.
                 </p>
             </div>
         </footer>
